<resources>
    <string name="app_name">Hack Sneakers</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="privacy">Privacy Police</string>
    <string name="version">Version 1.0.0</string>

    <string name="create_account">If you dont have an Account, Click Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Find your Favorite</string>


    <string name="title_categories">Categories</string>
    <string name="title_popular">Popular</string>
    <string name="scan_code">Scan Code</string>

    <string name="name_item">Nama Barang</string>
    <string name="type_item">Type Barang</string>
    <string name="info_item">Stok Barang</string>
    <string name="price_item">Harga Barang</string>

</resources>