<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AddShoesActivity">

    <ImageView
        android:id="@+id/imgHeading"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/color3"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tambah Barang"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/source_sans_pro_regular"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHeading"
        app:layout_constraintTop_toBottomOf="@+id/imgHeading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/img_item"
                android:src="@drawable/user_demo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_item"
                app:helperTextTextColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="25dp">

                <EditText
                    android:id="@+id/name_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_item"
                app:helperTextTextColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="25dp">

                <EditText
                    android:id="@+id/type_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_item"
                app:helperTextTextColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="25dp">

                <EditText
                    android:id="@+id/price_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_item"
                app:helperTextTextColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="25dp">

                <EditText
                    android:id="@+id/info_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/source_sans_pro_regular"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textColor="@color/white"
                android:fontFamily="@font/source_sans_pro_regular"
                android:backgroundTint="@color/primary"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>